# py-num-bench

./: .gitignore  README.md  justfile  pyproject.toml  tmp.md
conf/: config.toml  config_TEST.toml
docs/: README_Appendix_ctypes.md  README_Appendix_implementations.md  README_Appendix_testing.md
src/py_num_bench/: __init__.py  algo_implementation_loader.py  benchmark.py  core.py  main.py  reporter.py  track_store.py
src/py_num_bench/implementations/c/: sieve.c  trapezoid.c
src/py_num_bench/implementations/cpp/: sieve.cpp  trapezoid.cpp
src/py_num_bench/implementations/cython/: setup.py  sieve_cython.c  sieve_cython.pyx  trapezoid_cython.c  trapezoid_cython.pyx
src/py_num_bench/implementations/python/: sieve.py  trapezoid.py
src/py_num_bench/implementations/rust/sieve_rs/: Cargo.toml
src/py_num_bench/implementations/rust/sieve_rs/src/: lib.rs
src/py_num_bench/implementations/rust/trapezoid_rs/: Cargo.toml
src/py_num_bench/implementations/rust/trapezoid_rs/src/: lib.rs
tests/: check_cython.py  test_sieve.py  test_sieve_c.py  test_trapezoid.py
