[project]
name = "py-num-bench"
version = "0.1.2"
description = "Cross-language Python numerical benchmarking framework comparing Python, Cython, C, C++, and Rust implementations"
readme = "README.md"
authors = [{ name = "Michael Booth", email = "michael@databooth.com.au" }]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "plotly>=6.2.0",
    "pybind11>=3.0.0",
    "setuptools>=80.9.0",
    "tabulate>=0.9.0",
]

[project.scripts]
py-num-bench = "py_num_bench:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
